<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".HomeActivity">

    <FrameLayout
        android:id="@+id/BlackFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>

    <ImageView
        android:id="@+id/ruota"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:foreground="@drawable/ruota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pothString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/poth"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ruota"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/poth_LE"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ruota"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/detectorString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/detector"
        android:textColor="@color/orange"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pothString"
        app:layout_constraintTop_toTopOf="@id/ruota" />

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detectorString" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/btn_background"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/insert_username"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:maxLength="32"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColor="@color/black"

        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BlackFrame"
        app:layout_constraintStart_toStartOf="@+id/BlackFrame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <android.widget.Button
        android:id="@+id/continue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/btn_background"
        android:stateListAnimator="@null"
        android:text="@string/continue_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_editText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>