<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/orange">

    <FrameLayout
        android:id="@+id/BlackFrame"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="120dp">

    </FrameLayout>

    <ImageView
        android:id="@+id/ruota"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:foreground="@drawable/ruota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pothString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/poth"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ruota"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poth_LE"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@id/ruota"
        app:layout_editor_absoluteY="56dp"/>

    <TextView
        android:id="@+id/detectorString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detector"
        android:textColor="@color/orange"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/ruota"
        app:layout_constraintStart_toStartOf="@id/pothString"
        android:layout_marginTop="50dp"/>

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detectorString"/>


</androidx.constraintlayout.widget.ConstraintLayout>